<resources>
    <string name="app_name">WeatherApp</string>
    <string name="morpheusPhotoDesc">Basic Morpheus</string>
    <string name="pillRed">Goes to Day Screen</string>
    <string name="pillBlue">Goes to Night Screen</string>
    <string name="sun">Elder god</string>
    <string name="weatherCondition">SUNNY</string>
    <string name="humidityText">43%</string>
    <string name="rainText">33%</string>
    <string name="temperature">48</string>
    <string name="temperatureType">°C</string>
    <string name="city">Alanya</string>
    <string name="mockDesc">Secret</string>
    <string name="moon">Elder god</string>
    <string name="n_weatherCondition">CLEAR</string>
    <string name="n_humidityText">17%</string>
    <string name="n_rainText">0%</string>
    <string name="n_temperature">22</string>
    <string name="n_temperatureType">°C</string>
    <string name="n_city">Alanya</string>
    <string name="appwidget_text">16°C</string>
    <string name="appwidget_image_description">Full Moon</string>
    <string name="appwidget_status_text">CLEAR</string>
    <string name="appwidget_location">ALANYA</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This widget tells you current weather status</string>

</resources>