<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.WeatherApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:theme="@style/Theme.WeatherApp.AppWidgetContainer">

    <TextView
        android:id="@+id/appwidget_text"
        style="@style/Widget.WeatherApp.AppWidget.InnerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/ivWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_image_description"
        android:layout_alignTop="@+id/appwidget_text"
        android:layout_toEndOf="@+id/appwidget_text"
        android:src="@drawable/widget_moon" />

    <TextView
        android:id="@+id/txtType"
        style="@style/Widget.WeatherApp.AppWidget.InnerView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/appwidget_text"
        android:layout_alignStart="@+id/appwidget_text"
        android:layout_alignEnd="@+id/appwidget_text"
        android:layout_marginTop="-12dp"
        android:contentDescription="@string/appwidget_status_text"
        android:gravity="center"
        android:text="@string/appwidget_status_text"
        android:textSize="14sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/txtLocation"
        style="@style/Widget.WeatherApp.AppWidget.InnerView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/appwidget_text"
        android:layout_alignStart="@+id/appwidget_text"
        android:layout_alignEnd="@+id/appwidget_text"
        android:contentDescription="@string/appwidget_location"
        android:gravity="center"
        android:text="@string/appwidget_location"
        android:textSize="12sp"
        android:textStyle="bold|italic" />
</RelativeLayout>
